@@ -230,7 +230,7 @@ out:
 }
 
 int process_eventlog(const char *source, long *lastlogsize, unsigned long *out_timestamp, char **out_source,
-		unsigned short *out_severity, char **out_message, unsigned long	*out_eventid)
+		unsigned short *out_severity, char **out_message, unsigned long	*out_eventid, unsigned char skip_old_data)
 {
 	int		ret = FAIL;
 	const char	*__function_name = "process_eventlog";
@@ -267,6 +267,13 @@ int process_eventlog(const char *source, long *lastlogsize, unsigned long *out_t
 	if (SUCCEED == zbx_open_eventlog(wsource, &eventlog_handle, &LastID /* number */, &FirstID /* oldest */))
 	{
 		LastID += FirstID;
+
+		if (1 == skip_old_data)
+		{
+			*lastlogsize = LastID - 1;
+			zabbix_log(LOG_LEVEL_DEBUG, "Skipping existing data. lastlogsize:%li",
+					*lastlogsize);
+		}
 
 		if (*lastlogsize > LastID)
 			*lastlogsize = FirstID;
