@@ -27,6 +27,7 @@ int process_eventlog(
 	char			**out_source,
 	unsigned short	*out_severity,
 	char			**out_message,
-	unsigned long	*out_eventid);
+	unsigned long	*out_eventid,
+	unsigned char	skip_old_data);
 
 #endif /* ZABBIX_EVENTLOG_H */
