@@ -408,7 +408,7 @@ static void add_logfile(struct st_logfile **logfiles, int *logfiles_alloc, int *
  *                                                                            *
  *                                                                            *
  ******************************************************************************/
-int	process_logrt(char *filename, long *lastlogsize, int *mtime, char **value, const char *encoding)
+int	process_logrt(char *filename, long *lastlogsize, int *mtime, char **value, const char *encoding, unsigned char skip_old_data)
 {
 	int		i = 0;
 	int		nbytes;
@@ -529,8 +529,13 @@ int	process_logrt(char *filename, long *lastlogsize, int *mtime, char **value, c
 
 #endif/*_WINDOWS*/
 
+	if (1 == skip_old_data)
+		i = logfiles_num ? logfiles_num - 1 : 0;
+	else
+		i = 0;
+
 	/* find the oldest file that match */
-	for (i = 0; i < logfiles_num; i++)
+	for ( ; i < logfiles_num; i++)
 	{
 		if (logfiles[i].mtime < *mtime)
 		{
@@ -570,6 +575,14 @@ int	process_logrt(char *filename, long *lastlogsize, int *mtime, char **value, c
 			zabbix_log(LOG_LEVEL_WARNING, "Cannot open [%s]. Error: [%s]", logfile_candidate, strerror(errno));
 			break;/* must return, situation could have changed */
 		}
+
+		if (1 == skip_old_data)
+		{
+			*lastlogsize = (long)file_buf.st_size;
+			zabbix_log(LOG_LEVEL_DEBUG, "Skipping existing data. filename:'%s' lastlogsize:%li",
+					logfile_candidate, *lastlogsize);
+		}
+
 		*mtime = file_buf.st_mtime;/* must contain the latest mtime as possible */
 		if (file_buf.st_size < *lastlogsize)
 		{
@@ -679,7 +692,7 @@ int	process_logrt(char *filename, long *lastlogsize, int *mtime, char **value, c
  *                                                                            *
  *                                                                            *
  ******************************************************************************/
-int	process_log(char *filename, long *lastlogsize, char **value, const char *encoding)
+int	process_log(char *filename, long *lastlogsize, char **value, const char *encoding, unsigned char skip_old_data)
 {
 	int		f;
 	struct stat	buf;
@@ -698,6 +711,13 @@ int	process_log(char *filename, long *lastlogsize, char **value, const char *enc
 	{
 		zabbix_log(LOG_LEVEL_WARNING, "Cannot open [%s] [%s]", filename, strerror(errno));
 		return ret;
+	}
+
+	if (1 == skip_old_data)
+	{
+		*lastlogsize = (long)buf.st_size;
+		zabbix_log(LOG_LEVEL_DEBUG, "Skipping existing data. filename:'%s' lastlogsize:%li",
+				filename, *lastlogsize);
 	}
 
 	if (buf.st_size < *lastlogsize)
