@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)
  - [ZBX-1742] fixed processing of "system.uptime" check under Windows to return values as integers (Dmitry)
  - [ZBX-1786] fixed not remembered group when use paging in export screen (Vedmak)
  - [ZBX-1735] added "ERROR" words to some error messages in data cache module (Dmitry)
